samples/_failures_safe/1761377606_f5d482_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a0ce283e.c: In function ‘parse_assignment’:
./samples/SAFE/__tmp_a0ce283e.c:157:5: error: expected expression at end of input
  157 |     tok =
      |     ^~~
./samples/SAFE/__tmp_a0ce283e.c:157:5: error: expected declaration or statement at end of input
